fix features on mobile

--- a/products/style.css
+++ b/products/style.css
@@ -12,9 +12,13 @@
 
 .feature {
     display: flex;
-    justify-content: space-evenly;
     align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
     padding-bottom: 3em;
+    width: 100%;
+    margin: 0 1em;
+    overflow: hidden;
 }
 .feature .ola-image img {
     width: 450px;
